--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,8 @@ android {
 dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.google.firebase:firebase-firestore:24.9.0'
-
+    implementation 'com.google.firebase:firebase-storage:20.3.0'
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.android.material:material:1.10.0'
