--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".inside_chat"
+            android:exported="false" />
+        <activity
+            android:name=".contact_search"
+            android:exported="false" />
+        <activity
             android:name=".resetPass"
             android:exported="false" />
         <activity
