--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,9 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.firebaseui:firebase-ui-firestore:8.0.2'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
     implementation 'com.google.firebase:firebase-firestore:24.9.0'
     implementation 'com.google.firebase:firebase-storage:20.3.0'
     implementation 'com.github.dhaval2404:imagepicker:2.1'
